addon/mgmt-local-cluster/istio/otel-serviceEntry.yaml
apiVersion: networking.istio.io/v1beta1
kind: ServiceEntry
metadata:
  name: otel-collector-entry
  namespace: app
spec:
  hosts:
    - otel.j1-lab.local
  location: MESH_INTERNAL
  ports:
    - number: 4318
      name: http
      protocol: HTTP
  resolution: DNS
  addresses:
    - 240.0.0.2
  endpoints:
    - address: otel-collector.tracing.svc.cluster.local
